feat: implement basic create user
